turtleart.smallsquare.SmallSquare.scala.error
Erreur de compilation :
SmallSquare:13: error: Unmatched closing brace '}' ignored here
}
^